# MDST

./: .clang-format  .gitignore  README.md  requirements.txt
src/: CMakeLists.txt  main.cpp
src/algo/: CMakeLists.txt  mdst.cpp  mdst.hpp
src/dummy/: CMakeLists.txt  dummy.cpp  dummy.hpp
src/utility/: CMakeLists.txt  graph.cpp  graph.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
stats/: classes.py  draw_plot.py  tests_config.json  validator.py
tests/: CMakeLists.txt
tests/correctness/: CMakeLists.txt  tests.cpp  tests.hpp
tests/correctness/data/: 2.in  3.in  3.out  4.in  4.out  5.in  8.in  8.out
